# myGPIOweb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  openapi.yml
.github/workflows/: build_release.yml
cmake/: Install.cmake.in
contrib/initscripts/: mygpioweb.openrc.in  mygpioweb.service.in  mygpioweb.sysVinit.in
htdocs/: index.html  mygpiod-web.css  mygpiod-web.js  mygpioweb.css  mygpioweb.js
src/: CMakeLists.txt  api.c  api.h  compile_commands.json  compile_time.h.in  json.c  json.h  log.c  log.h  main.c  mygpiod.c  mygpiod.h  options.c  options.h  state.c  state.h  webserver.c  webserver.h
